# LeShade

./: .gitignore  COMPATIBILITY.md  README.md  core.py  core_reshade.py  gui.py  main.py  meson.build  pyproject.toml  python3-requirements.json  rthook.py  test_gui.py
.github/: FUNDING.yml
.github/workflows/: build.yml  build_flatpak.yml  copr-build-git.yml  copr-build-nightly.yml  copr-build-release.yml  copr-build.yml
core/: download_core.py  installation_core.py
fedora/: leshade-nightly.spec  leshade.spec
flatpak/: io.github.ishidawg.LeShade.metainfo.xml  io.github.ishidawg.LeShade.yml  io.github.ishidawg.ReshadeInstaller.desktop  io.github.ishidawg.ReshadeInstaller.metainfo.xml  io.github.ishidawg.ReshadeInstaller.yml  leshade.sh  reshade-installer.sh
pythonproject/reshade_installer/: main.py
scripts_core/: clone_core.py  download_core.py  installation_core.py  manager_core.py  script_download.py  script_download_dll.py  script_download_re.py  script_installation.py  script_manager.py  script_prepare_re.py  script_shaders.py  script_uninstall.py  script_vulkan.py
utils/: utils.py  wrapper_text.py
widgets/: clone_widget.py  home_widget.py  installation_widget.py  start_widget.py  uninstall_widget.py  widget_bottom_buttons.py  wrapper_widget.py
widgets/pages/: page_clone.py  page_download.py  page_dx8.py  page_installation.py  page_start.py  page_uninstall.py  page_wrapper.py
